--- a/documents/sim_paper.rmd
+++ b/documents/sim_paper.rmd
@@ -48,23 +48,23 @@ University of Minnesota
 
 \newpage
 
-## Abstract
+##Abstract
 
 ### Objective
 
-Sample size calculations play a central role in study design because sample size affects study interpretability and costs, and hospital resources and staff time. For most orthopaedic risk-factor studies, either the sample size calculation or the post-hoc power calculation assumes the disease status of control subjects is perfectly ascertained, when it may not be. That means control groups may be mixtures of both unaffected cases and some unidentified affected cases. Negative control groups with misclassified positive data are called _unlabeled_. Treating unlabeled groups as disease-negative control groups is known to cause misclassification bias, but there has been little research on how the misclassification affects the statistical power of risk association tests. In this study, we demonstrate the consequences of using  unlabeled groups as control groups on the power of risk association tests, with the intent of showing that control groups with even small misclassification rates can reduce the power of association tests. So, sample size calculations that ignore the unlabeled aspect of control groups may underpower studies. In addition, we offer a range of correction factors to adjust sample size calculations back to 80% power.
+Sample size calculations play a pivotal role in study design, as they influence study interpretability, costs, and the allocation of hospital resources and staff time. In the context of most orthopedic risk-factor studies, either the sample size calculation or the post-hoc power calculation assumes the precise ascertainment of disease status among control subjects, which might not always hold true. Consequently, control groups might consist of a mixture of both unaffected cases and some unidentified affected cases. Negative control groups containing misclassified positive data are denoted as "unlabeled." Treating unlabeled groups as disease-negative control groups is recognized to introduce misclassification bias. However, scant research has been conducted on the impact of such misclassification on the statistical power of risk association tests. In this study, we elucidate the repercussions of employing unlabeled groups as control groups on the power of risk association tests. Our aim is to demonstrate that even minor misclassification rates within control groups can substantially diminish the power of association tests. Consequently, disregarding the unlabeled aspect of control groups in sample size calculations may lead to underpowered studies. Additionally, we present a range of correction factors to recalibrate sample size calculations to achieve 80% power.
 
 ### Materials and Methods
 
-This was a simulation study using study designs from published orthopaedic risk-factor studies. The approach was to use their designs, but simulate the data to include known proportions of misclassified affected subjects in the control group. The simulated data was used to calculate the power of a risk-association test. We calculated powers for several study designs and misclassification rates, and compared them to a reference model.
+This study employed a simulation approach, utilizing study designs from published orthopedic risk-factor studies. The methodology involved adopting these designs and subsequently simulating the data to incorporate predetermined proportions of misclassified affected subjects within the control group. The simulated dataset was then employed to compute the power of a risk-association test. We calculated the statistical power for various study designs and misclassification rates, subsequently comparing these results against a reference model.
 
 ### Results
 
-Treating unlabeled data as disease-negative only always reduced statistical power compared to the reference power, and power loss increased with increasing misclassification rate. For this study, power could be improved back to 80% by increasing the sample size by a factor of 1.1 to 1.4.
+Treating unlabeled data as disease-negative consistently resulted in a reduction of statistical power in comparison to the reference power. Moreover, the extent of power loss increased as the misclassification rate escalated. In the context of this study, restoring the statistical power to 80% was attainable by increasing the sample size by a factor ranging from 1.1 to 1.4.
 
 ### Conclusion
 
-Researchers should used caution calculating sample sizes for risk-factor studies, and should include adjustments for estimated misclassification rates.
+Researchers should exercise caution when calculating sample sizes for risk-factor studies and should incorporate adjustments for estimated misclassification rates.
 
 Keywords: risk-factor, case-control, power, sample size
 
@@ -73,13 +73,22 @@ Keywords: risk-factor, case-control, power, sample size
 
 ## Introduction
 
-Sample size calculations play a central role in study design because sample size affects study costs, hospital resources and staff time. Also, underpowered studies with Type II error, can be hard to interpret, and there are also serious ethical considerations that have little chance of success. \cite{ halpern2002continuing, hofmeister2007sample}.
+Sample size calculations are pivotal in study design, influencing study costs, allocation of hospital resources, and staff time. Underpowered studies, fraught with Type II errors, can be challenging to interpret and pose ethical concerns with minimal prospects of success. \cite{ halpern2002continuing, hofmeister2007sample}.
 
-In orthopaedic risk factor studies, the positive disease status of the affected subjects is ascertained with perfect sensitivity and specificity, but sometimes the disease status of control subjects is not perfectly ascertained. That means control groups may be mixtures of both unaffected cases and some unidentified affected cases. Control groups with misclassified data are called _unlabeled_. Data with truly affected cases in the positive group and an unlabeled control group is called _positive-unlabeled_ (PU) data by the data science community.
+In orthopedic risk factor studies, while the positive disease status of affected subjects is ascertained with perfect sensitivity and specificity, control subjects' disease status is sometimes uncertain. This results in control groups comprising a blend of unaffected and unidentified affected cases. Control groups with misclassified data are termed "unlabeled." Such data scenarios, featuring truly affected cases in the positive group and an unlabeled control group, are referred to as "positive-unlabeled" (PU) data within the data science community.
 
-Examples of positive-unlabeled data are well documented in human medicine, but less so in veterinary medicine. Nevertheless, many veterinary studies the fall into the positive-unlabeled framework. For example, genome-wide association studies of cranial cruciate ligament disease (CCLD) in dogs use case-control designs. The affected cases are truly positive CCLD cases because they are enrolled from the set of dogs who have undergone knee stabilization surgery. The control cases are typically five-years-old or older with no history of CCLD and pass an orthopaedic veterinary exam by a board-certified surgeon. However some control dogs will have spontaneous rupture in the future, and so genetically belong in the CCLD affected group. Other control dogs may have sub-diagnostic disease. For example, a dog might appear sound on physical exam and be enrolled in the control group, but may actually have force-platform-detectable hindlimb lameness. Such a dog should not be in the control group because the lameness might be subclinical CCLD. \cite{wrehim08}
+Although examples of positive-unlabeled data are well-documented in human medicine, their presence in veterinary medicine is less explored. Nevertheless, many veterinary studies fall within the positive-unlabeled framework. For instance, genome-wide association studies on cranial cruciate ligament disease (CCLD) in dogs adopt case-control designs. The affected cases, derived from dogs undergoing knee stabilization surgery, are unequivocally positive for CCLD. Control cases are typically five years old or older, displaying no CCLD history, and clearing an orthopedic veterinary examination by a board-certified surgeon. However, some control dogs might experience future spontaneous ruptures, thus genetically aligning with the CCLD-affected group. Other controls might exhibit sub-diagnostic disease, masking latent CCLD. \cite{wrehim08}
 
 There are other examples of PU data in the veterinary literature, typically in risk-factor studies using case-control designs. For example, Arthur et al. (2016) used a case-control design to assess the risk of osteosarcoma following fracture repair. \cite{aakj16} They said, "There may be additional cases [in the control group] in which implant-related osteosarcoma was diagnosed in the private practice setting without referral...," suggesting that the control group may be unlabeled because some control-group cases were actually osteosarcoma positive, but diagnosed outside the study. In another example, Wylie et al. 2013 studied risk factors for equine laminitis using controls obtained from an owner survey. \cite{wcvj13} The authors noted the positive-unlabeled aspect of their data, "Our study relied on owner-reported diagnoses of endocrinopathic conditions, and this may have introduced misclassification bias."
+
+
+Abstract
+Objective
+Sample size calculations are pivotal in study design, influencing study costs, allocation of hospital resources, and staff time. Underpowered studies, fraught with Type II errors, can be challenging to interpret and pose ethical concerns with minimal prospects of success (Halpern, 2002; Hofmeister, 2007).
+
+In orthopedic risk factor studies, while the positive disease status of affected subjects is ascertained with perfect sensitivity and specificity, control subjects' disease status is sometimes uncertain. This results in control groups comprising a blend of unaffected and unidentified affected cases. Control groups with misclassified data are termed "unlabeled." Such data scenarios, featuring truly affected cases in the positive group and an unlabeled control group, are referred to as "positive-unlabeled" (PU) data within the data science community.
+
+Although examples of positive-unlabeled data are well-documented in human medicine, their presence in veterinary medicine is less explored. Nevertheless, many veterinary studies fall within the positive-unlabeled framework. For instance, genome-wide association studies on cranial cruciate ligament disease (CCLD) in dogs adopt case-control designs. The affected cases, derived from dogs undergoing knee stabilization surgery, are unequivocally positive for CCLD. Control cases are typically five years old or older, displaying no CCLD history, and clearing an orthopedic veterinary examination by a board-certified surgeon. However, some control dogs might experience future spontaneous ruptures, thus genetically aligning with the CCLD-affected group. Other controls might exhibit sub-diagnostic disease, masking latent CCLD.
 
 As mentioned above, the affected cases are "labeled" positive, but the control data is "unlabeled," because dogs may be affected or unaffected. Treating the unlabeled control group as entirely unaffected is called the _naive model_. The proportion of affected dogs in the control group is called the _nondetection rate_ or _undetected rate_.
 
@@ -87,11 +96,11 @@ Using the naive model when the nondetection rate is positive causes misclassific
 
 But bias in estimates (e.g., bias in regression coefficients) is just one part of the results; the other part is inference (e.g., p-values). Central to inference is the power of statistical tests. Power is used in planning a study as a measure of the ability of the study to make the correct decisions. That is, finding P<0.05 when it should. Typically, 80 percent power means that if the group parameters are truly different, then the statistical test has an 80 percent chance of obtaining p<0.05.
 
-During the design phase phase of risk association studies, researchers might calculate the sample size they need for 80% power assuming the nondetection rate is zero. That is, the there are no misclassified affected subjects in the control group. However, if after collection the data are positive unlabeled, then the naive model is incorrect and the estimated power may be less than estimated.
+During the design phase of risk association studies, researchers often calculate the sample size required for 80% power assuming a zero nondetection rate. In other words, they presume no misclassified affected subjects in the control group. However, if collected data conform to the positive-unlabeled scenario, the naive model becomes inappropriate, and estimated power might be lower than anticipated.
 
-We investigated the effect of positive-unlabeled data on loss of statistical power under the naive model. For comparision, the reference power is defined as the power when the naive model is correct and the group sizes are balanced. The results are described in terms power loss relative to the reference power, both percent power loss and absolute power loss. For context these two quantities are analogous to relative risk and absolute risk from epidemiology.
+This study examines the impact of positive-unlabeled data on the loss of statistical power under the naive model. For comparison, the reference power is defined when the naive model is accurate, and group sizes are balanced. Results quantify power loss relative to reference power in terms of both percentage and absolute power loss—parallel to relative and absolute risk in epidemiology.
 
-Using a simulation, we described how statistical power changes with varying proportions of undetected positives in the naive controls, and varying the imbalance between the numbers of cases and naive controls. Our first aim was to demonstrate that the naive analysis of positive-unlabeled data reduces statistical power in risk-factor studies, even for small nondetection rates. Our second aim was to offer correction factors to upward-adjust samples sizes and correct for the power loss described in aim 1.
+Through simulations, we elucidate how statistical power varies based on different proportions of undetected positives in naive controls and varying imbalances between case and control numbers. Our first objective is to demonstrate that naive analysis of positive-unlabeled data diminishes statistical power in risk-factor studies, even with minor nondetection rates. Our second objective is to provide correction factors to adjust sample sizes upwards, rectifying the power loss outlined in the first objective.
 
 \newpage
 
@@ -99,9 +108,9 @@ Using a simulation, we described how statistical power changes with varying prop
 
 ### The Test of Association
 
-This was a simulation study assessing the changes in power of a univariate association test under different PU conditions. There are many statistical tests of association, but we calculated the power for one of the most common tests, the Fisher exact test, which is used to test statistical significance of a binary risk factor. More generally, this test can be used to assess the significance of any risk factor using the predicted values from a univariate logistic regression.
+This study encompassed a simulation-based approach aimed at evaluating the alterations in the power of a univariate association test across various positive-unlabeled (PU) conditions. While numerous statistical tests gauge association, our analysis specifically focused on one of the most prevalent tests, namely the Fisher exact test. This test is commonly employed to assess the statistical significance of a binary risk factor. Broadly, the test can be extended to evaluate the significance of any risk factor by utilizing predicted values derived from a univariate logistic regression.
 
-In the context of risk association studies, and all else being equal, the Fisher exact test would achieve its maximum power for a balanced study design when the naive model is correct (i.e., no undetected positives in the control group). We call that maximum power the _reference power_ and reported our results as both percent power loss relative to the reference power and as absolute power loss from reference power. In other words, we are using the Fisher exact test to show how much statistical power is lost by ignoring the nondetection rate.
+Within the realm of risk association studies, assuming all other factors remain constant, the Fisher exact test achieves its peak power in a balanced study design when the naive model holds true (i.e., no undetected positives in the control group). This maximum power is termed the "reference power," and we present our findings in terms of both the percentage of power loss relative to the reference power and the absolute power loss from the reference power. In essence, we employed the Fisher exact test to illustrate the extent of statistical power reduction resulting from the oversight of the nondetection rate.
 
 ### The Sample Size and Group Imbalance
 
@@ -208,11 +217,11 @@ kable(tab2,
 
 # Discussion
 
-This study showed that under specific conditions there was modest power loss even for relatively small proportions of undetected positives in the control group. That means that risk-factor studies may have lower than expected power, and therefore increased chance of Type II error. It is import to note that changes in power may affect more than power. For example, in Table 1, rows 1 to 3, absolute power dropped from 0.82 (row 1) to 0.73 (row 3). It would take about 20 additional subject to reach the reference power (using Table 2). If subjects were very expensive, then the apparently small drop in power (0.09) is actually large in terms of cost. On the other hand, for an exploratory retrospective study, a 0.09 (9%) power drop may not be considered much.
+This study demonstrated that under specific conditions, there was a modest decline in power, even with relatively small proportions of undetected positives in the control group. This implies that risk-factor studies might exhibit lower-than-expected power, consequently elevating the risk of encountering Type II errors. Importantly, it should be noted that changes in power can influence more than just statistical power itself. For instance, consider Table 1, rows 1 to 3, where the absolute power decreased from 0.82 (row 1) to 0.73 (row 3). To regain the reference power (as per Table 2), approximately 20 additional subjects would be required. In cases where subjects are expensive, the seemingly minor power drop of 0.09 translates into significant cost implications. Conversely, for an exploratory retrospective study, a power drop of 0.09 (equivalent to 9%) might not be considered substantial.
 
-The working examples were from GWAS studies, but the simulation results apply to any kind of study with univariate association tests, such as any risk factor study. That is a broad class of studies. Examples include the univariate associations between post-op surgical infections and various surgical conditions (e.g., boarded surgeon vs resident, manufacturer of bone plates). In that case, there may be subdiagnostic infections in the control group. Another example is univariate association tests in veterinary surveys.
+The working examples were derived from Genome-Wide Association Studies (GWAS), yet the simulation outcomes are applicable to any study utilizing univariate association tests, including various risk factor studies. This encompasses a wide spectrum of study types. For instance, it covers the univariate associations between post-operative surgical infections and different surgical conditions (e.g., board-certified surgeon vs. resident, bone plate manufacturer). In such scenarios, the control group may harbor subdiagnostic infections. Similarly, univariate association tests in veterinary surveys also fall within this category.
 
-In this simulation, the undetected positives in the negative group were randomly sampled from the same population as the detected positives in the affected group. That's a common assumption, but there are other models.\cite{gr04} In one such model, the undetected positives in the control group might be a subpopulation of positives defined by another variable. For example, in a CCLD GWAS study, the undetected positives in the control group might be positive dogs with low body condition score. We did not explore those kinds of models in this research. Our goal was to find some examples to show that for some studies, misclassified data may cause power loss. When that power loss is combined with unbalanced data, the loss can be extreme. 
+In this simulation, undetected positive cases in the negative group were randomly sampled from the same population as detected positives in the affected group. Although this is a common assumption, alternative models exist (Greenland & Rothman, 2004). In one such model, undetected positive cases in the control group could constitute a subpopulation of positives defined by another variable. For example, in a GWAS study focusing on cranial cruciate ligament disease (CCLD), the undetected positive cases in the control group might consist of positive dogs with low body condition scores. However, such models were not explored in this research. Our objective was to identify instances illustrating that in certain studies, misclassified data can lead to power loss. When this power loss is compounded with imbalanced data, the resulting loss can be substantial.
 
 
 \newpage
