--- a/documents/sim_paper.tex
+++ b/documents/sim_paper.tex
@@ -70,20 +70,6 @@
 \doublespacing
 \usepackage[left]{lineno}
 \linenumbers
-\usepackage{booktabs}
-\usepackage{longtable}
-\usepackage{array}
-\usepackage{multirow}
-\usepackage{wrapfig}
-\usepackage{float}
-\usepackage{colortbl}
-\usepackage{pdflscape}
-\usepackage{tabu}
-\usepackage{threeparttable}
-\usepackage{threeparttablex}
-\usepackage[normalem]{ulem}
-\usepackage{makecell}
-\usepackage{xcolor}
 \ifLuaTeX
   \usepackage{selnolig}  % disable illegal ligatures
 \fi
@@ -106,7 +92,7 @@ Studies}\label{sample-size-considerations-in-the-design-of-orthopaedic-risk-fact
 
 \textbf{Running title:} Sample Size Considerations
 
-Richard Evans \({^\dagger}\)
+Richard Evans \({^\dagger}\) and Antonio Pozzi
 
 \({\dagger}\) Corresponding Author
 
@@ -117,59 +103,57 @@ University of Minnesota
 
 \newpage
 
-\#\#Abstract
+\hypertarget{abstract}{%
+\subsection{Abstract}\label{abstract}}
 
 \hypertarget{objective}{%
 \subsubsection{Objective}\label{objective}}
 
-Sample size calculations play a pivotal role in study design, as they
-influence study interpretability, costs, and the allocation of hospital
-resources and staff time. In the context of most orthopedic risk-factor
-studies, either the sample size calculation or the post-hoc power
-calculation assumes the precise ascertainment of disease status among
-control subjects, which might not always hold true. Consequently,
-control groups might consist of a mixture of both unaffected cases and
-some unidentified affected cases. Negative control groups containing
-misclassified positive data are denoted as ``unlabeled.'' Treating
-unlabeled groups as disease-negative control groups is recognized to
-introduce misclassification bias. However, scant research has been
-conducted on the impact of such misclassification on the statistical
-power of risk association tests. In this study, we elucidate the
-repercussions of employing unlabeled groups as control groups on the
-power of risk association tests. Our aim is to demonstrate that even
-minor misclassification rates within control groups can substantially
-diminish the power of association tests. Consequently, disregarding the
-unlabeled aspect of control groups in sample size calculations may lead
-to underpowered studies. Additionally, we present a range of correction
-factors to recalibrate sample size calculations to achieve 80\% power.
+Sample size calculations play a central role in study design because
+sample size affects study interpretability and costs, hospital
+resources, and staff time. For most orthopaedic risk-factor studies,
+either the sample size calculation or the post-hoc power calculation
+assumes the disease status of control subjects is perfectly ascertained,
+when it may not be. That means control groups may be mixtures of both
+unaffected cases and some unidentified affected cases. Negative control
+groups with misclassified positive data are called unlabeled. Treating
+unlabeled groups as disease-negative control groups is known to cause
+misclassification bias, but there has been little research on how
+misclassification affects the statistical power of risk association
+tests. In this study, we demonstrate the consequences of using unlabeled
+groups as control groups on the power of risk association tests, with
+the intent of showing that control groups with even small
+misclassification rates can reduce the power of association tests. So,
+sample size calculations that ignore the unlabeled aspect of control
+groups may underpower studies. In addition, we offer a range of
+correction factors to adjust sample size calculations back to 80\%
+power.
 
 \hypertarget{materials-and-methods}{%
 \subsubsection{Materials and Methods}\label{materials-and-methods}}
 
-This study employed a simulation approach, utilizing study designs from
-published orthopedic risk-factor studies. The methodology involved
-adopting these designs and subsequently simulating the data to
-incorporate predetermined proportions of misclassified affected subjects
-within the control group. The simulated dataset was then employed to
-compute the power of a risk-association test. We calculated the
-statistical power for various study designs and misclassification rates,
-subsequently comparing these results against a reference model.
+This was a simulation study using study designs from published
+orthopaedic risk-factor studies. The approach was to use their designs
+but simulate the data to include known proportions of misclassified
+affected subjects in the control group. The simulated data was used to
+calculate the power of a risk-association test. We calculated powers for
+several study designs and misclassification rates and compared them to a
+reference model.
 
 \hypertarget{results}{%
 \subsubsection{Results}\label{results}}
 
-Treating unlabeled data as disease-negative consistently resulted in a
-reduction of statistical power in comparison to the reference power.
-Moreover, the extent of power loss increased as the misclassification
-rate escalated. In the context of this study, restoring the statistical
-power to 80\% was attainable by increasing the sample size by a factor
-ranging from 1.1 to 1.4.
+Treating unlabeled data as disease-negative only always reduced
+statistical power compared to the reference power, and power loss
+increased with increasing misclassification rate. For this study, power
+could be improved back to 80\% by increasing the sample size by a factor
+of 1.1 to 1.4.
 
 \hypertarget{conclusion}{%
 \subsubsection{Conclusion}\label{conclusion}}
 
-Researchers should exercise caution when calculating sample sizes for
-risk-factor studies and should incorporate adjustments for estimated
+Researchers should use caution in calculating sample sizes for
+risk-factor studies and consider adjustments for estimated
 misclassification rates.
 
 Keywords: risk-factor, case-control, power, sample size
@@ -179,34 +163,37 @@ Keywords: risk-factor, case-control, power, sample size
 \hypertarget{introduction}{%
 \subsection{Introduction}\label{introduction}}
 
-Sample size calculations are pivotal in study design, influencing study
-costs, allocation of hospital resources, and staff time. Underpowered
-studies, fraught with Type II errors, can be challenging to interpret
-and pose ethical concerns with minimal prospects of success.
-\cite{ halpern2002continuing, hofmeister2007sample}.
+Sample size calculations play a central role in study design because
+sample size affects study costs, hospital resources, and staff time.
+Also, underpowered studies with Type II error, can be hard to interpret,
+and there are also serious ethical considerations that have little
+chance of success. \cite{ halpern2002continuing, hofmeister2007sample}.
 
-In orthopedic risk factor studies, while the positive disease status of
+In orthopaedic risk factor studies, the positive disease status of the
 affected subjects is ascertained with perfect sensitivity and
-specificity, control subjects' disease status is sometimes uncertain.
-This results in control groups comprising a blend of unaffected and
-unidentified affected cases. Control groups with misclassified data are
-termed ``unlabeled.'' Such data scenarios, featuring truly affected
-cases in the positive group and an unlabeled control group, are referred
-to as ``positive-unlabeled'' (PU) data within the data science
-community.
+specificity, but sometimes the disease status of control subjects is not
+perfectly ascertained. That means control groups may be mixtures of both
+unaffected cases and some unidentified affected cases. Control groups
+with misclassified data are called unlabeled. Data with truly affected
+cases in the positive group and an unlabeled control group is called
+positive-unlabeled (PU) data by the data science community.
 
-Although examples of positive-unlabeled data are well-documented in
-human medicine, their presence in veterinary medicine is less explored.
-Nevertheless, many veterinary studies fall within the positive-unlabeled
-framework. For instance, genome-wide association studies on cranial
-cruciate ligament disease (CCLD) in dogs adopt case-control designs. The
-affected cases, derived from dogs undergoing knee stabilization surgery,
-are unequivocally positive for CCLD. Control cases are typically five
-years old or older, displaying no CCLD history, and clearing an
-orthopedic veterinary examination by a board-certified surgeon. However,
-some control dogs might experience future spontaneous ruptures, thus
-genetically aligning with the CCLD-affected group. Other controls might
-exhibit sub-diagnostic disease, masking latent CCLD. \cite{wrehim08}
+Examples of positive-unlabeled data are well documented in human
+medicine, but less so in veterinary medicine. Nevertheless, many
+veterinary studies fall into the positive-unlabeled framework. For
+example, genome-wide association studies of cranial cruciate ligament
+disease (CCLD) in dogs use case-control designs. The affected cases are
+truly positive CCLD cases because they are enrolled from the set of dogs
+who have undergone knee stabilization surgery. The control cases are
+typically five years old or older with no history of CCLD and pass an
+orthopaedic veterinary exam by a board-certified surgeon. However some
+control dogs will have spontaneous rupture in the future, and so
+genetically belong in the CCLD affected group. Other control dogs may
+have sub-diagnostic disease. For example, a dog might appear sound on
+physical exam and be enrolled in the control group, but may actually
+have force-platform-detectable hindlimb lameness. Such a dog should not
+be in the control group because the lameness might be subclinical CCLD.
+\cite{wrehim08}
 
 There are other examples of PU data in the veterinary literature,
 typically in risk-factor studies using case-control designs. For
@@ -223,49 +210,19 @@ positive-unlabeled aspect of their data, ``Our study relied on
 owner-reported diagnoses of endocrinopathic conditions, and this may
 have introduced misclassification bias.''
 
-Abstract Objective Sample size calculations are pivotal in study design,
-influencing study costs, allocation of hospital resources, and staff
-time. Underpowered studies, fraught with Type II errors, can be
-challenging to interpret and pose ethical concerns with minimal
-prospects of success (Halpern, 2002; Hofmeister, 2007).
-
-In orthopedic risk factor studies, while the positive disease status of
-affected subjects is ascertained with perfect sensitivity and
-specificity, control subjects' disease status is sometimes uncertain.
-This results in control groups comprising a blend of unaffected and
-unidentified affected cases. Control groups with misclassified data are
-termed ``unlabeled.'' Such data scenarios, featuring truly affected
-cases in the positive group and an unlabeled control group, are referred
-to as ``positive-unlabeled'' (PU) data within the data science
-community.
-
-Although examples of positive-unlabeled data are well-documented in
-human medicine, their presence in veterinary medicine is less explored.
-Nevertheless, many veterinary studies fall within the positive-unlabeled
-framework. For instance, genome-wide association studies on cranial
-cruciate ligament disease (CCLD) in dogs adopt case-control designs. The
-affected cases, derived from dogs undergoing knee stabilization surgery,
-are unequivocally positive for CCLD. Control cases are typically five
-years old or older, displaying no CCLD history, and clearing an
-orthopedic veterinary examination by a board-certified surgeon. However,
-some control dogs might experience future spontaneous ruptures, thus
-genetically aligning with the CCLD-affected group. Other controls might
-exhibit sub-diagnostic disease, masking latent CCLD.
-
 As mentioned above, the affected cases are ``labeled'' positive, but the
 control data is ``unlabeled,'' because dogs may be affected or
 unaffected. Treating the unlabeled control group as entirely unaffected
-is called the \emph{naive model}. The proportion of affected dogs in the
-control group is called the \emph{nondetection rate} or \emph{undetected
-rate}.
+is called the naive model. The proportion of affected dogs in the
+control group is called the nondetection rate or undetected rate.
 
 Using the naive model when the nondetection rate is positive causes
-misclassification bias (because there affected cases in the control
+misclassification bias (because there are affected cases in the control
 group), and that bias is well documented in the data science literature.
 \cite{bd20} Biases due to misclassification can be mitigated using
 models other than the naive model and with the appropriate data
 analysis, and there are many articles describing methods for analyzing
-positive-unlabeled data. Bekker and Davis (2020) provides and excellent
+positive-unlabeled data. Bekker and Davis (2020) provide an excellent
 summary of methods. \cite{bd20} Sometimes, however, researchers prefer
 the naive model because the analysis is simpler and they believe their
 small nondetection rates induce misclassification biases that are too
@@ -281,28 +238,28 @@ Typically, 80 percent power means that if the group parameters are truly
 different, then the statistical test has an 80 percent chance of
 obtaining p\textless0.05.
 
-During the design phase of risk association studies, researchers often
-calculate the sample size required for 80\% power assuming a zero
-nondetection rate. In other words, they presume no misclassified
-affected subjects in the control group. However, if collected data
-conform to the positive-unlabeled scenario, the naive model becomes
-inappropriate, and estimated power might be lower than anticipated.
+During the design phase of risk association studies, researchers might
+calculate the sample size they need for 80\% power assuming the
+nondetection rate is zero. That is, there are no misclassified affected
+subjects in the control group. However, if after collection the data are
+positively unlabeled, then the naive model is incorrect and the
+estimated power may be less than estimated. We investigated the effect
+of positive-unlabeled data on loss of statistical power under the naive
+model. For comparison, the reference power is defined as the power when
+the naive model is correct and the group sizes are balanced. The results
+are described in terms of power loss relative to the reference power,
+both percent power loss and absolute power loss. For context, these two
+quantities are analogous to relative risk and absolute risk from
+epidemiology.
 
-This study examines the impact of positive-unlabeled data on the loss of
-statistical power under the naive model. For comparison, the reference
-power is defined when the naive model is accurate, and group sizes are
-balanced. Results quantify power loss relative to reference power in
-terms of both percentage and absolute power loss---parallel to relative
-and absolute risk in epidemiology.
-
-Through simulations, we elucidate how statistical power varies based on
-different proportions of undetected positives in naive controls and
-varying imbalances between case and control numbers. Our first objective
-is to demonstrate that naive analysis of positive-unlabeled data
-diminishes statistical power in risk-factor studies, even with minor
-nondetection rates. Our second objective is to provide correction
-factors to adjust sample sizes upwards, rectifying the power loss
-outlined in the first objective.
+Using a simulation, we described how statistical power changes with
+varying proportions of undetected positives in the naive controls, and
+varying the imbalance between the numbers of cases and naive controls.
+Our first aim was to demonstrate that the naive analysis of
+positive-unlabeled data reduces statistical power in risk-factor
+studies, even for small nondetection rates. Our second aim was to offer
+correction factors to upward-adjust sample sizes and correct for the
+power loss described in Aim 1.
 
 \newpage
 
@@ -312,37 +269,35 @@ outlined in the first objective.
 \hypertarget{the-test-of-association}{%
 \subsubsection{The Test of Association}\label{the-test-of-association}}
 
-This study encompassed a simulation-based approach aimed at evaluating
-the alterations in the power of a univariate association test across
-various positive-unlabeled (PU) conditions. While numerous statistical
-tests gauge association, our analysis specifically focused on one of the
-most prevalent tests, namely the Fisher exact test. This test is
-commonly employed to assess the statistical significance of a binary
-risk factor. Broadly, the test can be extended to evaluate the
-significance of any risk factor by utilizing predicted values derived
-from a univariate logistic regression.
+This was a simulation study assessing the changes in the power of a
+univariate association test under different PU conditions. There are
+many statistical tests of association, but we calculated the power for
+one of the most common tests, the Fisher exact test, which is used to
+test the statistical significance of a binary risk factor. More
+generally, this test can be used to assess the significance of any risk
+factor using the predicted values from a univariate logistic regression.
 
-Within the realm of risk association studies, assuming all other factors
-remain constant, the Fisher exact test achieves its peak power in a
-balanced study design when the naive model holds true (i.e., no
-undetected positives in the control group). This maximum power is termed
-the ``reference power,'' and we present our findings in terms of both
-the percentage of power loss relative to the reference power and the
-absolute power loss from the reference power. In essence, we employed
-the Fisher exact test to illustrate the extent of statistical power
-reduction resulting from the oversight of the nondetection rate.
+In the context of risk association studies, and all else being equal,
+the Fisher exact test would achieve its maximum power for a balanced
+study design when the naive model is correct (i.e., no undetected
+positives in the control group). We call that maximum power the
+reference power and reported our results as both percent power loss
+relative to the reference power and as absolute power loss from
+reference power. In other words, we are using the Fisher exact test to
+show how much statistical power is lost by ignoring the nondetection
+rate.
 
 \hypertarget{the-sample-size-and-group-imbalance}{%
 \subsubsection{The Sample Size and Group
 Imbalance}\label{the-sample-size-and-group-imbalance}}
 
-The total sample size for the simulation was fixed N=200, which is
+The total sample size for the simulation was fixed at N=200, which is
 consistent with Healey et al.~2019 (N=216), and Baird et al.~2014
-(N=217). \cite{bcioa14} \cite{hmhcbhkr19} The effect size, 0.21, was
-chosen because with N=200, the reference power was close to 80 percent,
-which is value that is commonly used in study design. That way, the
-reference model is the one with standard power of 80 percent. Note that
-the sample size and effect size are not a key parameters for the
+(N=217). \cite{bcioa14, hmhcbhkr19} The effect size, 0.21, was chosen
+because, with N=200, the reference power was close to 80 percent, which
+is a value that is commonly used in study design. That way, the
+reference model is the one with a standard power of 80 percent. Note
+that the sample size and effect size are not key parameters for the
 simulation because for any sample size an effect size can be chosen so
 that power is 80 percent. Also, effect size and sample size are not
 features of PU data, per se.
@@ -377,7 +332,7 @@ and then the 5000 p-values are compared to 0.05. The proportion of
 p-values less than 0.05 is the estimated power.
 
 Simulating the data works backward from what might be expected. Instead
-starting with values for a risk factor (e.g., 200 0's and 1's
+of starting with values for a risk factor (e.g., 200 0's and 1's
 representing sex) and then simulating their disease status, we start
 with the disease status (e.g., 50 affected cases and 150 controls with
 135 unaffected and 15 affected) and then assign binary values for the
@@ -389,7 +344,7 @@ begin with calculating power for the Fisher exact test under the
 reference model, which is 100 cases and 100 correctly labeled (i.e., 100
 truly unaffected) controls. That is, there are no affected cases in the
 control group, so this is not positive-unlabeled data, and the naive
-model is the correct model. Next we associate a binary risk factor
+model is the correct model. Next, we associate a binary risk factor
 variable, \(X\) (e.g., sex), with the cases and controls.The negative
 controls were simulated by sampling 100 negative cases from a binomial
 distribution with \(Pr(X=1) = 0.2\). That probability means the the
@@ -399,13 +354,13 @@ effect size is. As mentioned above, the effect size was 0.21, so the 100
 positive cases were sampled from a binomial distribution with
 \(Pr(X=1) = 0.2 + 0.21\). Using the sex example, that means that having
 sex=1 predisposes the animals to about double the baseline risk of
-disease (the baseline is 0.2, and with sex = 1, the risk is double, 0.2+
+disease (the baseline is 0.2, and with sex = 1, the risk is double, 0.2
 + 0.21 = 0.41.).
 
 Now, the 200 cases are pairs of binary data, one representing the group
 and the other representing the risk factor. These simulated data were
 tested with the Fisher exact test. As mentioned above, this process was
-repeated 5000 times and the resulting 5000 p-values used to estimate
+repeated 5000 times, and the resulting 5000 p-values used to estimate
 power.
 
 For the second example, we calculate the power for a positive-unlabeled
@@ -420,7 +375,7 @@ binomial distribution with \(Pr(X=1) = 0.2+ 0.21\), and 100 cases are
 sampled from the same binomial distribution with
 \(Pr(X=1) = 0.2 + 0.21\). The 10 mislabeled affected cases remain in the
 control group, so as to measure the effect of treating PU data naively.
-As before, the simulated data are treated like pilot data and p-values
+As before, the simulated data were treated like pilot data, and p-values
 were calculated. This process is repeated 5000 times and the was
 estimated as described in the previous example.
 
@@ -442,14 +397,14 @@ Table 1 describes power loss for the three study designs with three
 different group sizes, (50, 150), (150, 50), and (100, 100), and for
 three nondetection rates, 0, 0.05 (5\%), and 0.1 (10\%). To give these
 parameters context, if the group sizes are (50, 150) and the
-nondectection rate is 0.1, then the positive (affected) group has 50
+nondetection rate is 0.1, then the positive (affected) group has 50
 cases, and the unlabeled control group (which we are treating naively in
 the analysis) has 150 cases, 15 of which are actually affected cases.
 When the nondetection rate is zero, the naive model is correct because
-there no affected cases in the control group. The first row is the
+there are no affected cases in the control group. The first row is the
 reference power, so its loss of power compared to itself is zero. The
 reference power was calculated in the simulation just like all the other
-powers, and was estimated to be 0.82.
+powers and was estimated to be 0.82.
 
 Columns 5 and 6 are the power loss columns and have negative entries
 because for this simulation positive-unlabeled data analyzed under the
@@ -460,7 +415,7 @@ row shows a -4.81\% relative power reduction when the group sizes are
 balanced but five percent (0.05) of the control group are actually
 positive cases.
 
-Rows one, four and seven are correct models (i.e., no positives in the
+Rows one, four, and seven are correct models (i.e., no positives in the
 control group). Rows four and seven show a power loss due to sample size
 imbalance only. So, for this small example, group imbalance sometimes
 caused more power loss than misclassified data as is seen by comparing
@@ -469,24 +424,23 @@ imbalance results in less powerful tests. As an aside, more data is
 often better than less data, and it is sometimes better to have more
 unbalanced data than fewer balanced data.
 
-Using Table 1, increasing nondetection rate within a study design
+Using Table 1, increasing the nondetection rate within a study design
 decreased power. For example, for the (100, 100) study design, power
-decreased by more than 10\% as the non-detection rate increased (row one
-to three). For the (50, 150) design, rows seven to nine, power decreased
-by 12.02\% (22.47 - 10.45) from the correct model (row seven), but
-22.47\% from the reference model.
-
-Finally, note that for this simulation, the absolute power loses are
-marked, but not extreme. For example, in the (100, 100) design, (rows 1
-to 3) the power dropped to 0.73 (0.82 - 0.09) for row 3.
+decreased by more than 10\% as the non-detection rate increased (rows
+one to three). For the (50, 150) design, in rows seven to nine, power
+decreased by 12.02\% (22.47 - 10.45) from the correct model (row seven),
+but 22.47\% from the reference model. Finally, note that for this
+simulation, the absolute power losses are marked, but not extreme. For
+example, in the (100, 100) design, (rows 1 to 3) the power dropped to
+0.73 (0.82 - 0.09) for row 3.
 
 \pagebreak
 
 Table 1. Power loss. This table orders sample sizes by relative power
 loss (\%). The first row is the reference power, which had an absolute
 power of 0.82 (82\%). The last two columns represent power loss relative
-to 0.82, both as a percentage and absolute difference. Note that some
-inconsistancies in the table are due to rounding. For example, in rows 3
+to 0.82, both as a percentage and an absolute difference. Note that some
+inconsistencies in the table are due to rounding. For example, in rows 3
 to 5, the absolute power is constant at 0.09, but the relative power
 changes.
 
@@ -528,11 +482,11 @@ Absolute power loss (from 0.82)
 
 \pagebreak
 
-Table 2 hows how many additional subject are require to regain power
+Table 2 shows how many additional subjects are required to regain power
 when the non-detection rate is 10\%. Rows 1 to 5 are for the (100, 100)
 design, rows 6 to 10 are for the (150, 50) design, and rows 11 to 15 are
-for the (50, 150) design. Sample size was increased by 10\% for each row
-within a study design. As one might expect, lower positive-unlabeled
+for the (50, 150) design. The sample size was increased by 10\% for each
+row within a study design. As one might expect, lower positive-unlabeled
 power needs more subjects to bring the power up to 80\%. For the
 unbalanced designs, the increased sample size also fixes the power loss
 due to imbalance. For example, in row one, the power is 0.69 for the
@@ -543,8 +497,8 @@ subjects are required (rows one and two).
 
 Table 2. Power improvement. Rows 1, 6, and 11, show the power for when
 there are no false positives. The other rows show improvements in power
-when there is a 10\% nondection rate. The sixth column shows the percent
-increase in sample size, and the last column is power.
+when there is a 10\% nondetection rate. The sixth column shows the
+percent increase in sample size, and the last column is power.
 
 \begin{longtable}[]{@{}
   >{\raggedleft\arraybackslash}p{(\columnwidth - 12\tabcolsep) * \real{0.0440}}
@@ -596,43 +550,38 @@ Power
 \hypertarget{discussion}{%
 \section{Discussion}\label{discussion}}
 
-This study demonstrated that under specific conditions, there was a
-modest decline in power, even with relatively small proportions of
-undetected positives in the control group. This implies that risk-factor
-studies might exhibit lower-than-expected power, consequently elevating
-the risk of encountering Type II errors. Importantly, it should be noted
-that changes in power can influence more than just statistical power
-itself. For instance, consider Table 1, rows 1 to 3, where the absolute
-power decreased from 0.82 (row 1) to 0.73 (row 3). To regain the
-reference power (as per Table 2), approximately 20 additional subjects
-would be required. In cases where subjects are expensive, the seemingly
-minor power drop of 0.09 translates into significant cost implications.
-Conversely, for an exploratory retrospective study, a power drop of 0.09
-(equivalent to 9\%) might not be considered substantial.
+This study showed that under specific conditions there was modest power
+loss even for relatively small proportions of undetected positives in
+the control group. That means that risk-factor studies may have lower
+than expected power, and therefore increased chance of Type II error. It
+is important to note that changes in power may affect more than power.
+For example, in Table 1, rows 1 to 3, absolute power dropped from 0.82
+(row 1) to 0.73 (row 3). It would take about 20 additional subjects to
+reach the reference power (using Table 2). If subjects were very
+expensive, then the apparently small drop in power (0.09) is actually
+large in terms of cost. On the other hand, for an exploratory
+retrospective study, a 0.09 (9\%) power drop may not be considered much.
 
-The working examples were derived from Genome-Wide Association Studies
-(GWAS), yet the simulation outcomes are applicable to any study
-utilizing univariate association tests, including various risk factor
-studies. This encompasses a wide spectrum of study types. For instance,
-it covers the univariate associations between post-operative surgical
-infections and different surgical conditions (e.g., board-certified
-surgeon vs.~resident, bone plate manufacturer). In such scenarios, the
-control group may harbor subdiagnostic infections. Similarly, univariate
-association tests in veterinary surveys also fall within this category.
+The working examples were from GWAS studies, but the simulation results
+apply to any kind of study with univariate association tests, such as
+any risk factor study. That is a broad class of studies. Examples
+include the univariate associations between post-op surgical infections
+and various surgical conditions (e.g., boarded surgeon vs.~resident,
+manufacturer of bone plates). In that case, there may be subdiagnostic
+infections in the control group. Another example is univariate
+association tests in veterinary surveys.
 
-In this simulation, undetected positive cases in the negative group were
-randomly sampled from the same population as detected positives in the
-affected group. Although this is a common assumption, alternative models
-exist (Greenland \& Rothman, 2004). In one such model, undetected
-positive cases in the control group could constitute a subpopulation of
-positives defined by another variable. For example, in a GWAS study
-focusing on cranial cruciate ligament disease (CCLD), the undetected
-positive cases in the control group might consist of positive dogs with
-low body condition scores. However, such models were not explored in
-this research. Our objective was to identify instances illustrating that
-in certain studies, misclassified data can lead to power loss. When this
-power loss is compounded with imbalanced data, the resulting loss can be
-substantial.
+In this simulation, the undetected positives in the negative group were
+randomly sampled from the same population as the detected positives in
+the affected group. That's a common assumption, but there are other
+models. In one such model, the undetected positives in the control group
+might be a subpopulation of positives defined by another variable. For
+example, in a CCLD GWAS study, the undetected positives in the control
+group might be positive dogs with low body condition scores. We did not
+explore those kinds of models in this research. Our goal was to find
+some examples to show that for some studies, misclassified data may
+cause power loss. When that power loss is combined with unbalanced data,
+the loss can be extreme.
 
 \newpage
 
